# fight-club

./: CMakeLists.common.txt  CMakeLists.txt  LICENSE  README.md  tournament.sh
engine/: CMakeLists.txt  Config.cc  Config.h  Engine.cc  Engine.h  ExternalPlayer.cc  ExternalPlayer.h  ExternalProgram.c  ExternalProgram.h  GameEnvironment.cc  GameEnvironment.h  GameRules.cc  GameRules.h  GameState.cc  GameState.h  Logger.cc  Logger.h  Player.cc  Player.h  PlayerListener.cc  PlayerListener.h  StdoutPlayer.cc  WebsocketServer.cc  WebsocketServer.h  main.cc
engine-tests/: CMakeLists.txt  testGameEnvironment.cc
engine/tests/: CMakeLists.txt  example.cfg  testConfig.cc
games/: CMakeLists.txt
games/reversi/: engine_main.cc  engine_ui_main.cc
loggers/: CMakeLists.txt
loggers/websocket/: CMakeLists.txt
reversi/: CMakeLists.txt  ReversiGameState.cc  ReversiGameState.h  ReversiGameWindow.cc  ReversiRules.cc  ReversiRules.h  ReversiWidget.cc  ReversiWindow.ui  SimpleAI.cc  SimpleAI.h  bot_main.cc  engine_main.cc  ui_main.cc
stale/: ExternalPlayer.cc  ExternalPlayer.h  Player.cc  Player.h  StdoutPlayer.h
stale/games/reversi/: ReversiGameWindow.h  ReversiRules.h  ReversiWidget.h
stale/loggers/websocket/: CMakeLists.txt
