FIND_PACKAGE(Qt4 COMPONENTS QtCore QtNetwork REQUIRED)

INCLUDE(${QT_USE_FILE})
INCLUDE(../../CMakeLists.common.txt)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ggdb -Wall -pedantic ")

AUX_SOURCE_DIRECTORY(. SRC)
SET(HEADERS
	WebsocketServer.h
)

QT4_WRAP_CPP(HEADERS_MOC ${HEADERS})

GET_BINARY_FILENAME(BINARY websock-logger)
ADD_LIBRARY(${BINARY} SHARED ${SRC} ${HEADERS_MOC})
TARGET_LINK_LIBRARIES(${BINARY} ${QT_LIBRARIES})
