FIND_PACKAGE(Qt4 COMPONENTS QtCore QtNetwork REQUIRED)

INCLUDE(${QT_USE_FILE})
INCLUDE(../../CMakeLists.common.txt)

SET(SRC
	main.cc
)

SET(HEADERS
)

QT4_WRAP_CPP(HEADERS_MOC ${HEADERS})

SET(BINARY fc-wslog)
ADD_LIBRARY(${BINARY} SHARED ${SRC} ${HEADERS_MOC})
TARGET_LINK_LIBRARIES(${BINARY} ${QT_LIBRARIES})
